Test/git-issues/git-issue-288.dfy.expect
git-issue-288.dfy(9,7): Error: module B may not redeclare a non-opaque type name T from module A, even with the same type, unless refining (...)
1 resolution/type errors detected in git-issue-288.dfy
